[build-system]
requires = [ "setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.black]
line-length = 88
skip-string-normalization = 1

[tool.pytest.ini_options]
# https://docs.pytest.org/en/latest/reference/customize.html
minversion = "6.0"
addopts = "--doctest-modules -vv --cov=pcse --cov-report=html tests"
testpaths = [
    "tests",
]

[tool.pydocstyle]
match = '(?!test_|state_machine).*\.py'

[tool.mypy]
python_version = "3.10"
strict = true
scripts_are_modules = true
implicit_reexport = true
exclude = [
    '^pcse/state_machine/.*\.py$',
]


# Reminder:
# '^file1\.py$',   # TOML literal string (single-quotes, no escaping necessary)
# "^file2\\.py$",  # TOML basic string (double-quotes, backslash and other characters need escaping)